--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="event">
-      <a href="https://2016.stateofthemap.org/">
+      <a href="http://2016.stateofthemap.org/">
         <img src="sotm.png" />
         <div class="description">
           <h1>State of the Map 2016</h1>
