--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="event">
       <a href="http://2016.stateofthemap.org/">
-        <img src="sotm.png" />
+        <img src="sotm2016.png" />
         <div class="description">
           <h1>State of the Map 2016</h1>
           <h2>Brussels, Belgium</h2>
