Add dates for SOTM 2016

--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
         <div class="description">
           <h1>State of the Map 2016</h1>
           <h2>Brussels, Belgium</h2>
+          <h3>23rd to 25th September 2016</h3>
         </div>
       </a>
     </div>
