--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,17 @@
   </head>
   <body>
     <div class="event">
+      <a href="http://2017.stateofthemap.org/">
+        <img src="sotm2017.png" />
+        <div class="description">
+          <h1>State of the Map 2017</h1>
+          <h2>Aizu-Wakamatsu, Japan</h2>
+          <h3>18th to 20th August 2017</h3>
+        </div>
+      </a>
+    </div>
+    <hr />
+    <div class="event">
       <a href="http://2016.stateofthemap.org/">
         <img src="sotm2016.png" />
         <div class="description">
@@ -15,7 +26,6 @@
         </div>
       </a>
     </div>
-    <hr />
     <div class="event">
       <img src="sotm2014.png" />
       <div class="description">
