--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="event">
-      <a href="http://2017.stateofthemap.org/">
+      <a href="https://2017.stateofthemap.org/">
         <img src="sotm2017.png" />
         <div class="description">
           <h1>State of the Map 2017</h1>
@@ -17,7 +17,7 @@
     </div>
     <hr />
     <div class="event">
-      <a href="http://2016.stateofthemap.org/">
+      <a href="https://2016.stateofthemap.org/">
         <img src="sotm2016.png" />
         <div class="description">
           <h1>State of the Map 2016</h1>
