Revert "Remove non-working 2013 link"
This reverts commit 9b758b18c2605b533ae02fd0c8b457d9b802fc2a.

--- a/html/index.html
+++ b/html/index.html
@@ -35,12 +35,14 @@
       </div>
     </div>
     <div class="event">
-      <img src="sotm2013.png" />
-      <div class="description">
-        <h1>State of the Map 2013</h1>
-        <h2>Birmingham, United Kingdom</h2>
-        <h3>6th to 8th September 2013</h3>
-      </div>
+      <a href="http://2013.stateofthemap.org/">
+        <img src="sotm2013.png" />
+        <div class="description">
+          <h1>State of the Map 2013</h1>
+          <h2>Birmingham, United Kingdom</h2>
+          <h3>6th to 8th September 2013</h3>
+        </div>
+      </a>
     </div>
     <div class="event">
       <a href="https://2012.stateofthemap.org/">
