Switch 2013.stateofthemap.org to use https

--- a/html/index.html
+++ b/html/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="event">
-      <a href="http://2013.stateofthemap.org/">
+      <a href="https://2013.stateofthemap.org/">
         <img src="sotm2013.png" />
         <div class="description">
           <h1>State of the Map 2013</h1>
