--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   </head>
   <body>
     <div class="event">
+      <a href="https://2019.stateofthemap.org/">
+        <img src="sotm2019.png" />
+        <div class="description">
+          <h1>State of the Map 2019</h1>
+          <h2>Heidelberg, Germany</h2>
+          <h3>21st to 23rd September 2019</h3>
+        </div>
+      </a>
+    </div>
+    <hr />
+    <div class="event">
       <a href="https://2018.stateofthemap.org/">
         <img src="sotm2018.png" />
         <div class="description">
@@ -15,7 +26,6 @@
         </div>
       </a>
     </div>
-    <hr />
     <div class="event">
       <a href="https://2017.stateofthemap.org/">
         <img src="sotm2017.png" />
