--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   </head>
   <body>
     <div class="event">
+      <a href="https://2020.stateofthemap.org/">
+        <img src="sotm.png" />
+        <div class="description">
+          <h1>State of the Map 2020</h1>
+          <h2>Cape Town, South Africa</h2>
+          <h3>3rd to 5th July 2020</h3>
+        </div>
+      </a>
+    </div>
+    <hr />
+    <div class="event">
       <a href="https://2019.stateofthemap.org/">
         <img src="sotm2019.png" />
         <div class="description">
@@ -15,8 +26,7 @@
         </div>
       </a>
     </div>
-    <hr />
-    <div class="event">
+     <div class="event">
       <a href="https://2018.stateofthemap.org/">
         <img src="sotm2018.png" />
         <div class="description">
