--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="event">
       <a href="https://2020.stateofthemap.org/">
-        <img src="sotm.png" />
+        <img src="sotm2020.png" />
         <div class="description">
           <h1>State of the Map 2020</h1>
           <h2>Cape Town, South Africa</h2>
