--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   </head>
   <body>
     <div class="event">
+      <a href="https://2021.stateofthemap.org/">
+        <img src="sotm.png" />
+        <div class="description">
+          <h1>State of the Map 2021</h1>
+          <h2>Online</h2>
+          <h3>9th to 11th July 2020</h3>
+        </div>
+      </a>
+    </div>
+    <hr />
+    <div class="event">
       <a href="https://2020.stateofthemap.org/">
         <img src="sotm2020.png" />
         <div class="description">
@@ -15,7 +26,6 @@
         </div>
       </a>
     </div>
-    <hr />
     <div class="event">
       <a href="https://2019.stateofthemap.org/">
         <img src="sotm2019.png" />
