update date and "location" of sotm 2020

--- a/html/index.html
+++ b/html/index.html
@@ -21,8 +21,8 @@
         <img src="sotm2020.png" />
         <div class="description">
           <h1>State of the Map 2020</h1>
-          <h2>Cape Town, South Africa</h2>
-          <h3>3rd to 5th July 2020</h3>
+          <h2><s>Cape Town, South Africa</s> Online</h2>
+          <h3>4th to 5th July 2020</h3>
         </div>
       </a>
     </div>
