--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="event">
       <a href="https://2021.stateofthemap.org/">
-        <img src="sotm.png" />
+        <img src="sotm2021.png" />
         <div class="description">
           <h1>State of the Map 2021</h1>
           <h2>Online</h2>
