--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   </head>
   <body>
     <div class="event">
+      <a href="https://2025.stateofthemap.org/">
+        <img src="sotm2025.png" width="200px" />
+        <div class="description">
+          <h1>State of the Map 2025</h1>
+          <h2>Manila, Philippines &amp; Online</h2>
+          <h3>3rd to 5th October 2025</h3>
+        </div>
+      </a>
+    </div>
+    <hr />
+    <div class="event">
       <a href="https://2024.stateofthemap.org/">
         <img src="sotm2024.svg" width="200px" />
         <div class="description">
@@ -15,7 +26,6 @@
         </div>
       </a>
     </div>
-    <hr />
     <div class="event">
       <a href="https://2022.stateofthemap.org/">
         <img src="sotm2022.png" />
